tests/fixtures/invalid/max_str_bytes.py
# Cannot call max() with Str, Bytes
x = max("hello", b"hello")
